refactor(upgrade): 优化固件版本查找和升级检查服务
- FirmwareVersionLookupService: 将 tag 参数重命名为 internalVersion
- UpgradeCheckService: 简化代码结构，移除冗余日志